tests/NormalTests/paczka1/small_fuzzy/21898529.err
Error in line 2: 7XO2vemY0i S984 70,9
Error in line 1: zHj8sP3Qb S984 63,8
Error in line 8: bwG2N A4a5 28,0
Error in line 6: bXpr S888 29,8
